workflow-1: update secret name

--- a/workflow-1/yaml/publisher.yaml
+++ b/workflow-1/yaml/publisher.yaml
@@ -42,7 +42,7 @@ spec:
               memory: 200Mi
               cpu: 200m
       imagePullSecrets:
-        - name: github-secret-haicgu
+        - name: tutorial-registry-secret
       restartPolicy: Always
       # dnsPolicy: ClusterFirstWithHostNet
 # ---
