--- a/workflow-1/yaml/subscriber.yaml
+++ b/workflow-1/yaml/subscriber.yaml
@@ -41,7 +41,7 @@ spec:
               memory: 200Mi
               cpu: 200m
       imagePullSecrets:
-        - name: github-secret-haicgu
+        - name: tutorial-registry-secret
       restartPolicy: Always
       #dnsPolicy: ClusterFirstWithHostNet
 # ---
