workflow-1: update BROKER_ADDRESS

--- a/workflow-1/yaml/publisher.yaml
+++ b/workflow-1/yaml/publisher.yaml
@@ -29,7 +29,7 @@ spec:
           # command: ["sleep", "100600"] # for-testing
           env:
             - name: BROKER_ADDRESS
-              value: "mosquitto"
+              value: "mosquitto.isc25"
             - name: BROKER_PORT
               value: "1883"
             - name: TOPIC
